--- a/journal.cabal
+++ b/journal.cabal
@@ -19,10 +19,12 @@ extra-source-files:  README.md
 
 executable journal
   main-is:           Journal.hs
-  -- other-modules:       
-  -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7, time >=1.4 && <1.5, directory >=1.2 && <1.3, process >=1.1 && <1.2, filepath >=1.3 && <1.4, split >=0.2 && <0.3, text >=0.11 && <0.12
-  -- hs-source-dirs:      
+  build-depends:     base >=4.6 && <4.7,
+                     time >=1.4 && <1.5,
+                     directory >=1.2 && <1.3,
+                     process >=1.1 && <1.2,
+                     filepath >=1.3 && <1.4,
+                     split >=0.2 && <0.3, text >=0.11 && <0.12
   default-language:  Haskell2010
 
 test-suite test-journal
